--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "gsap": "^3.13.0",
     "lucide-react": "^0.501.0",
     "react": "^19.0.0",
+    "react-device-detect": "^2.2.3",
     "react-dom": "^19.0.0",
     "react-router-dom": "^7.5.1",
     "swiper": "^11.2.6",
